@@ -31,4 +31,8 @@ public class Lwjgl3WindowAdapter implements Lwjgl3WindowListener {
 	@Override
 	public void filesDropped(String[] files) {	
 	}
+
+	@Override
+	public void refreshRequested() {
+	}
 }
