@@ -178,6 +178,12 @@ public interface Application {
 
 	/** Posts a {@link Runnable} on the main loop thread.
 	 * 
+	 * In a multi-window application, the {@linkplain Gdx#graphics} and {@linkplain Gdx#input} values may be
+	 * unpredictable at the time the Runnable is executed. If graphics or input are needed, they can be copied
+	 * to a variable to be used in the Runnable. For example:
+	 * <p><code>
+	 * final Graphics graphics = Gdx.graphics;
+	 * 
 	 * @param runnable the runnable. */
 	public void postRunnable (Runnable runnable);
 
